Got srefs working, Time to make nav bar work properly

--- a/www/index.html
+++ b/www/index.html
@@ -26,12 +26,17 @@
 
 
     <script src="js/controllers/mainCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/loginCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/homeCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/userCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/wodCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/navCtrl.js" charset="utf-8"></script>
+
     <script src="js/services/homeService.js" charset="utf-8"></script>
     <script src="js/services/userService.js" charset="utf-8"></script>
     <script src="js/services/wodService.js" charset="utf-8"></script>
+    <script src="js/services/loginService.js" charset="utf-8"></script>
+
     <script src="js/directives/navBar.js" charset="utf-8"></script>
 
 
