--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,8 @@
     <script src="js/controllers/userCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/wodCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/navCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/signUpCtrl.js" charset="utf-8"></script>
+
 
     <script src="js/services/homeService.js" charset="utf-8"></script>
     <script src="js/services/userService.js" charset="utf-8"></script>
