Add wod Admin almost finished

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/controllers/wodCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/navCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/signUpCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/addWodCtrl.js" charset="utf-8"></script>
 
 
     <script src="js/services/homeService.js" charset="utf-8"></script>
