--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+
     <ui-view></ui-view>
 
 
@@ -33,8 +34,10 @@
     <script src="js/controllers/navCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/signUpCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/addWodCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/boxCtrl.js" charset="utf-8"></script>
 
 
+    <script src="js/services/boxService.js" charset="utf-8"></script>
     <script src="js/services/homeService.js" charset="utf-8"></script>
     <script src="js/services/userService.js" charset="utf-8"></script>
     <script src="js/services/wodService.js" charset="utf-8"></script>
