--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <ui-view></ui-view>
 
-
+<script src="//cdn.jsdelivr.net/satellizer/0.14.0/satellizer.min.js"></script>
     <script src="js/controllers/mainCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/loginCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/homeCtrl.js" charset="utf-8"></script>
@@ -35,6 +35,7 @@
     <script src="js/controllers/signUpCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/addWodCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/boxCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/settingsCtrl.js" charset="utf-8"></script>
 
 
     <script src="js/services/boxService.js" charset="utf-8"></script>
