Got auth working, time to start working on what the admin can see, and what regular users can not, also for admin i need to go into DB and change hit admin status to true

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
     <script src="js/controllers/boxCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/settingsCtrl.js" charset="utf-8"></script>
 
-
+    <script src="js/services/settingsService.js" charset="utf-8"></script>
     <script src="js/services/boxService.js" charset="utf-8"></script>
     <script src="js/services/homeService.js" charset="utf-8"></script>
     <script src="js/services/userService.js" charset="utf-8"></script>
