Got a ton done, need to show users info corretly, add pictures, got friend profile to show up and other things

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/controllers/addWodCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/boxCtrl.js" charset="utf-8"></script>
     <script src="js/controllers/settingsCtrl.js" charset="utf-8"></script>
+    <script src="js/controllers/friendCtrl.js" charset="utf-8"></script>
 
     <script src="js/services/settingsService.js" charset="utf-8"></script>
     <script src="js/services/boxService.js" charset="utf-8"></script>
